# FormakiPrac

./: CMakeLists.txt  README.md  build_script  main.cpp
Earley/include/: EarleyManager.h  EarleyManger.h  earley.h
Earley/src/: EarleyManager.cpp  earley.cpp
Grammar/: CF_Grammar.cpp  CF_Grammar.h  Creator.cpp  Parser.cpp
Tests/: 2ndFromHwTest.cpp  Balanced_tests.cpp  CMakeLists.txt  Regexes_tests.cpp  diff_psp_tests.cpp  fromCW_test.cpp  psp_tests.cpp
Tests/MethodTests/: ManagerTester.cpp  ParseTester.cpp
